#895 Add Avro naming regression coverage
Exercise schema serialization, canonical fixed-name conflicts, projection stability, and the related user-facing contract.